--- a/WaxCenter_SimApp/WaxCenter_SimApp.csproj
+++ b/WaxCenter_SimApp/WaxCenter_SimApp.csproj
@@ -65,20 +65,21 @@
     <Compile Include="Model\RandomDistribution\IDistribution.cs" />
     <Compile Include="Model\RandomDistribution\TriangularDistribution.cs" />
     <Compile Include="Model\Simulation\GUIData\GUIDataValues.cs" />
+    <Compile Include="Model\Simulation\NewsPaper\EventSimulCoreNP.cs" />
+    <Compile Include="Model\Simulation\NewsPaper\Zakaznik.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Agents\Agent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseAgentArrivalEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseServiceEndEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseServiceStartEvent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Events\SimEvent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Core\EventSimulationCore.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Core\ISimulation.cs" />
-    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\IComponent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\BaseComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\ServiceComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SinkComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SourceComponent.cs" />
     <Compile Include="Model\Simulation\TrafikaSimulation\Customer.cs" />
-    <Compile Include="Model\Simulation\TrafikaSimulation\Events\CustomerArrivalEvent.cs" />
     <Compile Include="Model\Simulation\TrafikaSimulation\EventSimCoreNewsPapers.cs" />
-    <Compile Include="Model\Simulation\TrafikaSimulation\Events\NewsPaperEvent.cs" />
-    <Compile Include="Model\Simulation\TrafikaSimulation\Events\ServiceEndEvent.cs" />
-    <Compile Include="Model\Simulation\TrafikaSimulation\Events\ServiceStartEvent.cs" />
     <Compile Include="Model\Statistics\BaseStatictic.cs" />
     <Compile Include="Model\Statistics\ContinousStatistic.cs" />
     <Compile Include="Model\Statistics\DiscreteStatistic.cs" />
