--- a/WaxCenter_SimApp/WaxCenter_SimApp.csproj
+++ b/WaxCenter_SimApp/WaxCenter_SimApp.csproj
@@ -68,14 +68,21 @@
     <Compile Include="Model\Simulation\NewsPaper\EventSimulCoreNP.cs" />
     <Compile Include="Model\Simulation\NewsPaper\Zakaznik.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Agents\Agent.cs" />
-    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseAgentArrivalEvent.cs" />
-    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseServiceEndEvent.cs" />
-    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseServiceStartEvent.cs" />
-    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\SimEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\AgentArrivalEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseEvents\BaseDelayEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseEvents\BaseServiceEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\DelayEndEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\DelayStartEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\BaseEvents\SimEvent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Core\EventSimulationCore.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Core\ISimulation.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\ServiceEndEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\Events\ServiceStartEvent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\AdditionServiceComponents\ResourcePool.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\BaseComponent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\DelayComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\ServiceComponent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\AdditionServiceComponents\ServiceStaff.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SinkComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SourceComponent.cs" />
     <Compile Include="Model\Simulation\TrafikaSimulation\Customer.cs" />
