--- a/WaxCenter_SimApp/WaxCenter_SimApp.csproj
+++ b/WaxCenter_SimApp/WaxCenter_SimApp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="GUIComponents\Clock\SimulationClock.Designer.cs">
       <DependentUpon>SimulationClock.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUIComponents\SimComponents\GUISimComponentsWrapper\GUISimulationComponentsWrapper.cs" />
     <Compile Include="GUIComponents\SimComponents\ISimComponent.cs" />
     <Compile Include="Model\RandomDistribution\CustomDistribution.cs" />
     <Compile Include="Model\RandomDistribution\DiscreteDistribution.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Model\Simulation\SimulationBaseClasses\Events\ServiceStartEvent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\AdditionServiceComponents\ResourcePool.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\BaseComponent.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\BaseSourceComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\ComponentValuesClasses\DelayStateData.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\ComponentValuesClasses\ServiceStateData.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\ComponentValuesClasses\SinkStateData.cs" />
@@ -90,6 +92,7 @@
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\DelayComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\ServiceComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\AdditionServiceComponents\ServiceStaff.cs" />
+    <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SimulationComponentsWrapper\SimulationComponentsContainer.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SinkComponent.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\SourceComponent.cs" />
     <Compile Include="Model\Simulation\TrafikaSimulation\Customer.cs" />
