--- a/WaxCenter_SimApp/WaxCenter_SimApp.csproj
+++ b/WaxCenter_SimApp/WaxCenter_SimApp.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Model\Simulation\SimulationBaseClasses\Results\ResultGroup.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Results\StatResults.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Settings\BaseEventSimulationSettings.cs" />
+    <Compile Include="Model\Simulation\VaccinationCenter\ExperimentalSimulationSettings.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\Settings\ReplicationsSimulationSettings.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\AdditionServiceComponents\ResourcePool.cs" />
     <Compile Include="Model\Simulation\SimulationBaseClasses\SimulationComponents\BaseComponent.cs" />
